feat: user wallet and push notification and language switch and RazorPay implement